--- a/mongodb/Dockerfile
+++ b/mongodb/Dockerfile
@@ -1,2 +1,2 @@
-FROM sxc654/docker-composer:alpine
+FROM sxc654/docker-composer:latest
 RUN apk add libressl-dev && pecl install mongodb && docker-php-ext-enable mongodb
