--- a/mongodb/Dockerfile
+++ b/mongodb/Dockerfile
@@ -1,2 +1,5 @@
-FROM sxc654/docker-composer:latest
-RUN apk add libressl-dev && pecl install mongodb && docker-php-ext-enable mongodb
+FROM sxc654/docker-composer:php7.1
+RUN apk add \
+    libressl-dev \
+    && pecl install mongodb \
+    && docker-php-ext-enable mongodb
