--- a/imap/Dockerfile
+++ b/imap/Dockerfile
@@ -1,2 +1,6 @@
-FROM sxc654/docker-composer:latest
-RUN apk add libressl-dev && pecl install mongodb && docker-php-ext-enable mongodb
+FROM sxc654/docker-composer:php7.1
+RUN apk add \
+    libressl-dev \
+    imap-dev \
+    && docker-php-ext-configure imap --with-imap --with-imap-ssl \
+    && docker-php-ext-install imap
