--- a/mongodb/Dockerfile
+++ b/mongodb/Dockerfile
@@ -1,5 +1,5 @@
 FROM sxc654/docker-composer:php7.1
-RUN apk add \
+RUN apk update && apk add --no-cache \
     libressl-dev \
     && pecl install mongodb \
     && docker-php-ext-enable mongodb
