--- a/php7.1.4/Dockerfile
+++ b/php7.1.4/Dockerfile
@@ -20,8 +20,8 @@ RUN apk update && apk add --no-cache \
     make \
     autoconf \
     supervisor \
-
-RUN docker-php-source extract \
+    && echo "==> 编译php环境" \
+    && docker-php-source extract \
     && pecl install xdebug redis opcache\
     && docker-php-ext-enable xdebug redis opcache\
     && docker-php-source delete \
@@ -31,13 +31,13 @@ RUN docker-php-source extract \
     && echo "xdebug.remote_port=9000" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && echo "xdebug.remote_handler=dbgp" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && echo "xdebug.remote_connect_back=0" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-    && rm -rf /tmp/*
-
-RUN docker-php-ext-configure gd \
+    && echo "==> 安装gd库" \
+    && docker-php-ext-configure gd \
         --with-gd \
         --with-freetype-dir=/usr/include/ \
         --with-png-dir=/usr/include/ \
         --with-jpeg-dir=/usr/include/ \
-      && docker-php-ext-install gd \
-      && apk del --no-cache freetype freetype-dev libpng libpng-dev libjpeg-turbo libjpeg-turbo-dev \
-      && rm -rf /tmp/*
+    && docker-php-ext-install gd \
+    && apk del --no-cache freetype freetype-dev libpng libpng-dev libjpeg-turbo libjpeg-turbo-dev \
+    && echo "==> 清理缓存" \
+    && rm -rf /tmp/*
