--- a/jre/Dockerfile
+++ b/jre/Dockerfile
@@ -5,6 +5,6 @@ RUN echo http://mirrors.ustc.edu.cn/alpine/latest-stable/main > /etc/apk/reposit
     echo http://mirrors.ustc.edu.cn/alpine/latest-stable/community >> /etc/apk/repositories
 
 RUN apk update && \
-    apk add --no-cache openjdk8 busybox libmcrypt libmcrypt-dev curl git make autoconf supervisor tzdata && \
+    apk add --no-cache openjdk8 busybox libmcrypt libmcrypt-dev curl git make openssh-client autoconf supervisor tzdata && \
     ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo "Asia/Shanghai" > /etc/timezone 
